// SEAL Hackathon Management System
// Paste this file into https://dbdiagram.io/ to visualize the database schema.
// Source of truth: docs/Hackathon2026.drawio + docs/DATABASE_SCHEMA.md

Project Hackathon2026 {
  database_type: "PostgreSQL"
  Note: "Schema hiện tại có 27 bảng. Profile đã gộp vào User. Mọi bảng dùng IsDisable để soft-disable."
}

// =========================
// User / auth
// =========================

Table Users {
  Id Guid [pk]
  Email string
  HashPassword string
  FirstName string
  LastName string
  PhoneNumber string
  AvatarUrl string
  Bio string
  Address string
  DateOfBirth DateTimeOffset
  StudentId string
  College string
  ImgUrl string
  LinkUrl string
  Role RoleEnum
  VerifyEmailAt DateTimeOffset
  Status UserStatusEnum
  BanReason string
  BannedAt DateTimeOffset
  IsVerified bool
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}


Table RefreshTokens {
  Id Guid [pk]
  UserId Guid
  RefreshTokenHash string
  IpAddress string
  UserAgent string
  DeviceLabel string
  ExpiredAt DateTimeOffset
  RevokedAt DateTimeOffset
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table ResetPasswords {
  Id Guid [pk]
  UserId Guid
  TokenHash string
  IsUsed bool
  ExpiresAt DateTimeOffset
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table EmailVerifications {
  Id Guid [pk]
  UserId Guid
  TokenHash string
  ExpiredAt DateTimeOffset
  Status EmailVerificationStatusEnum
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

// =========================
// Event / round / track / topic / award
// =========================
Table Events {
  Id Guid [pk]
  Name string
  Description string
  StartTime DateTimeOffset
  EndTime DateTimeOffset
  RegisterLimitTime DateTimeOffset
  LimitTeam int
  MinMember int
  MaxMember int
  Status EventStatusEnum
  NumberRound int
  Season string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Rounds {
  Id Guid [pk]
  EventId Guid
  Name string
  Description string
  RoundNo int
  StartTime DateTimeOffset
  EndTime DateTimeOffset
  StartSubmission DateTimeOffset
  EndSubmission DateTimeOffset
  LimitTeam int
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table CriteriaTemplates {
  Id Guid [pk]
  RoundId Guid
  Title string
  Description string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table CriteriaItems {
  Id Guid [pk]
  CriteriaTemplateId Guid
  Name string
  Description string
  Score decimal
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Tracks {
  Id Guid [pk]
  EventId Guid
  Title string
  Description string
  MaxTeam int
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Topics {
  Id Guid [pk]
  TrackId Guid
  Title string
  Description string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Awards {
  Id Guid [pk]
  EventId Guid
  Name string
  Description string
  LevelAward string
  NumberOfAward int
  Prize decimal
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table LeaderBoards {
  Id Guid [pk]
  EventId Guid
  Year int
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table LeaderBoardDetails {
  Id Guid [pk]
  LeaderBoardId Guid
  TeamId Guid
  Score decimal
  LevelAward string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

// =========================
// Team / registration / participation
// =========================
Table Teams {
  Id Guid [pk]
  Name string
  CanEdit bool
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table TeamDetails {
  Id Guid [pk]
  TeamId Guid
  UserId Guid
  IsLeader bool
  Status TeamDetailStatusEnum
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table RegisterTeams {
  Id Guid [pk]
  TeamId Guid
  EventId Guid
  TrackId Guid
  TopicId Guid
  Description string
  RejectionReason string
  Status RegisterTeamStatusEnum
  IsBanned bool
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table RoundDetails {
  Id Guid [pk]
  RoundId Guid
  RegisterTeamId Guid
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Submissions {
  Id Guid [pk]
  RoundDetailId Guid
  Url string
  Description string
  Status SubmissionStatusEnum
  SubmittedAt DateTimeOffset
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Invitations {
  Id Guid [pk]
  TeamId Guid
  UserId Guid
  LimitTime DateTimeOffset
  Status InvitationStatusEnum
  Description string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Notifications {
  Id Guid [pk]
  UserId Guid
  TeamId Guid
  Title string
  Status NotificationStatusEnum
  Description string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

// =========================
// Assignments / scoring / reporting
// =========================
Table EventRoles {
  Id Guid [pk]
  Name EventRoleEnum
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table AssignEvents {
  Id Guid [pk]
  UserId Guid
  EventRoleId Guid
  EventId Guid
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table AssignTracks {
  Id Guid [pk]
  AssignEventId Guid
  TrackId Guid
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Scores {
  Id Guid [pk]
  SubmissionId Guid
  AssignTrackId Guid
  IsRetake bool
  TotalScore decimal
  IsMock bool
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table ScoreItems {
  Id Guid [pk]
  ScoreId Guid
  CriteriaItemId Guid
  AssignTrackId Guid
  Score decimal
  Comment string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table MentorNotifications {
  Id Guid [pk]
  AssignTrackId Guid
  Title string
  Description string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

Table Reports {
  Id Guid [pk]
  UserId Guid
  AssignEventId Guid
  SubmissionId Guid
  Title string
  Description string
  ImgUrl string
  FileUrl string
  Status ReportStatusEnum
  Reason string
  TypeReport string
  IsDisable bool
  CreatedAt DateTimeOffset
  UpdatedAt DateTimeOffset
}

// =========================
// Relationships
// =========================
Ref: RefreshTokens.UserId > Users.Id
Ref: ResetPasswords.UserId > Users.Id
Ref: EmailVerifications.UserId > Users.Id

Ref: Events.Id < Rounds.EventId
Ref: Events.Id < Tracks.EventId
Ref: Events.Id < Awards.EventId
Ref: Events.Id - LeaderBoards.EventId
Ref: Rounds.Id < CriteriaTemplates.RoundId
Ref: CriteriaTemplates.Id < CriteriaItems.CriteriaTemplateId
Ref: Tracks.Id < Topics.TrackId
Ref: Tracks.Id < AssignTracks.TrackId

Ref: Teams.Id < TeamDetails.TeamId
Ref: Users.Id < TeamDetails.UserId
Ref: Teams.Id < RegisterTeams.TeamId
Ref: Topics.Id < RegisterTeams.TopicId
Ref: Events.Id < RegisterTeams.EventId
Ref: Tracks.Id < RegisterTeams.TrackId
Ref: Rounds.Id < RoundDetails.RoundId
Ref: RegisterTeams.Id < RoundDetails.RegisterTeamId
Ref: RoundDetails.Id < Submissions.RoundDetailId
Ref: Teams.Id < Invitations.TeamId
Ref: Users.Id < Invitations.UserId
Ref: Teams.Id < Notifications.TeamId
Ref: Users.Id < Notifications.UserId

Ref: Users.Id < AssignEvents.UserId
Ref: EventRoles.Id < AssignEvents.EventRoleId
Ref: Events.Id < AssignEvents.EventId
Ref: AssignEvents.Id < AssignTracks.AssignEventId
Ref: AssignTracks.Id < MentorNotifications.AssignTrackId

Ref: Submissions.Id < Scores.SubmissionId
Ref: Scores.Id < ScoreItems.ScoreId
Ref: CriteriaItems.Id < ScoreItems.CriteriaItemId
Ref: AssignTracks.Id < ScoreItems.AssignTrackId

Ref: Users.Id < Reports.UserId
Ref: AssignEvents.Id < Reports.AssignEventId
Ref: Submissions.Id - Reports.SubmissionId

Ref: LeaderBoards.Id < LeaderBoardDetails.LeaderBoardId
Ref: Teams.Id < LeaderBoardDetails.TeamId


// =========================
// Enums
// =========================

Enum RoleEnum {
  Admin [note: '0']
  Staff [note: '1']
  Student [note: '2']
  Lecturer [note: '3']
}

Enum EventRoleEnum {
  Mentor [note: '0']
  Judge [note: '1']
}

Enum EmailVerificationStatusEnum {
  Pending [note: '0']
  Verified [note: '1']
  Expired [note: '2']
}

Enum EventStatusEnum {
  Draft [note: '0']
  Published [note: '1']
  Closed [note: '2']
  Cancelled [note: '3']
}

Enum InvitationStatusEnum {
  Pending [note: '0']
  Accepted [note: '1']
  Rejected [note: '2']
  Expired [note: '3']
}

Enum NotificationStatusEnum {
  Pending [note: '0']
  Unread [note: '1']
  Read [note: '2']
}

Enum RegisterTeamStatusEnum {
  Pending [note: '0']
  Approved [note: '1']
  Rejected [note: '2']
}

Enum ReportStatusEnum {
  Open [note: '0']
  Closed [note: '1']
}

Enum SubmissionStatusEnum {
  Submitted [note: '0']
}

Enum TeamDetailStatusEnum {
  Active [note: '0']
  Inactive [note: '1']
}

Enum UserStatusEnum {
  Active [note: '0']
  Inactive [note: '1']
  Banned [note: '2']
}

// NOTE: LeaderBoardsStatusEnum and ScoresStatusEnum are defined in the codebase, 
// but currently are used as boolean fields or separate columns instead of a single Enum field.
